# libnkutils

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  libnkutils-common.mk  libnkutils-common.mk.in  libnkutils-nolibtool.mk  libnkutils-nolibtool.mk.in  libnkutils.m4  libnkutils.mk  libnkutils.mk.in  meson.build  meson_options.txt
bindings/: meson.build
bindings/include/: nkutils-bindings.h
bindings/src/: bindings.c
bindings/tests/: bindings.c
core/: meson.build
core/include/: nkutils-colour.h  nkutils-enum.h  nkutils-format-string.h  nkutils-gtk-settings.h  nkutils-xdg-de.h  nkutils-xdg-theme.h
core/src/: colour.c  enum.c  format-string-example.c  format-string.c  git-version.c  gtk-settings.c  xdg-de.c  xdg-theme-example.c  xdg-theme.c
core/tests/: colour.c  enum.c  format-string.c  gtk-settings.c  xdg-de.c  xdg-theme.c
doc/: libnkutils-man.xml  meson.build
man/: libnkutils-man.xml
src/: bindings.c  colour.c  enum.c  format-string-example.c  format-string.c  git-version.c  gtk-settings.c  nkutils-bindings.h  nkutils-colour.h  nkutils-enum.h  nkutils-format-string.h  nkutils-glib-compat.h  nkutils-gtk-settings.h  nkutils-token.h  nkutils-uuid.h  nkutils-xdg-de.h  nkutils-xdg-theme.h  token-example.c  token.c  uuid-apr-util.c  uuid-internal.h  uuid-libuuid.c  uuid.c  xdg-de.c  xdg-theme-example.c  xdg-theme.c
tests/: bindings.c  colour  colour.c  enum.c  format-string.c  gtk-settings.c  token  token.c  uuid.c  xdg-de.c  xdg-theme.c
uuid/: meson.build
uuid/include/: nkutils-uuid.h
uuid/src/: uuid-apr-util.c  uuid-internal.h  uuid-libsystemd.c  uuid-libuuid.c  uuid-nosystemd.c  uuid.c
uuid/tests/: uuid.c
