option('uuid', type: 'boolean', value: false, description: 'nkutils uuid module')
option('token', type: 'boolean', value: false, description: 'nkutils token module')
option('token-enum', type: 'boolean', value: false, description: 'nkutils token module, enum feature')
option('xdg-theme', type: 'boolean', value: false, description: 'nkutils xdg-theme module')
option('enum', type: 'boolean', value: false, description: 'nkutils enum module')
option('colour', type: 'boolean', value: false, description: 'nkutils colour module')
option('colour-alpha', type: 'boolean', value: false, description: 'nkutils colour module, alpha feature')
option('colour-double', type: 'boolean', value: false, description: 'nkutils colour module, double feature')
option('colour-string', type: 'boolean', value: false, description: 'nkutils colour module, string feature')
